ZCS-13343: Added translation for label LBL_zimbraFeatureEnableMailRecall && LBL_zimbraFeatureMailRecallInterval

--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -980,6 +980,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Svaradresse til kvittering for l\u00e6st
 LBL_zimbraPrefReadReceiptsToAddress = Svaradresse til kvittering for l\u00e6st: 
 LBL_zimbraPrefMailSendReadReceipts = Send kvitteringer for l\u00e6st:
 LBL_zimbraFeatureReadReceiptsEnabled = Aktiv\u00e9r kvitteringer for l\u00e6st
+LBL_zimbraFeatureEnableMailRecall = mail tilbagekaldelse
+LBL_zimbraFeatureMailRecallInterval = Mail tilbagekaldelse al
 LBL_zimbraPrefMandatorySpellCheckEnabled = Aktiv\u00e9r obligatorisk stavekontrol
 SEND_READ_RECEIPT_PROMPT = Prompt
 SEND_READ_RECEIPT_NEVER = Aldrig
