--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -989,6 +989,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Antwortadresse f\u00fcr Lesebest\u00e4tigu
 LBL_zimbraPrefReadReceiptsToAddress = Antwortadresse f\u00fcr Lesebest\u00e4tigung: 
 LBL_zimbraPrefMailSendReadReceipts = Lesebest\u00e4tigungen senden:
 LBL_zimbraFeatureReadReceiptsEnabled = Lesebest\u00e4tigungen aktivieren
+LBL_zimbraFeatureEnableMailRecall = Mail-R\u00fcckruf
+LBL_zimbraFeatureMailRecallInterval = E-Mail-R\u00fcckruf
 LBL_zimbraPrefMandatorySpellCheckEnabled = Obligatorische Rechtschreibpr\u00fcfung aktivieren
 SEND_READ_RECEIPT_PROMPT = Auffordern
 SEND_READ_RECEIPT_NEVER = Nie
