--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -993,6 +993,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Direcci\u00f3n para el mensaje de confirma
 LBL_zimbraPrefReadReceiptsToAddress = Direcci\u00f3n para el mensaje de confirmaci\u00f3n de lectura del mensaje recibido: 
 LBL_zimbraPrefMailSendReadReceipts = Enviar confirmaciones de lectura:
 LBL_zimbraFeatureReadReceiptsEnabled = Habilitar confirmaciones de lectura
+LBL_zimbraFeatureEnableMailRecall = retiro de correo
+LBL_zimbraFeatureMailRecallInterval = intervalo de recuperaci\u00f3n de correo
 LBL_zimbraPrefMandatorySpellCheckEnabled = Habilitar el corrector ortogr\u00e1fico obligatorio
 SEND_READ_RECEIPT_PROMPT = Preguntar
 SEND_READ_RECEIPT_NEVER = Nunca
