--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -1002,6 +1002,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Jasotako mezua irakurri izana berresteko m
 LBL_zimbraPrefReadReceiptsToAddress = Jasotako mezua irakurri izana berresteko mezurako helbidea: 
 LBL_zimbraPrefMailSendReadReceipts = Bidali irakurri izanaren berrespenak:
 LBL_zimbraFeatureReadReceiptsEnabled = Gaitu irakurri izanaren berrespenak
+LBL_zimbraFeatureEnableMailRecall = posta gogoratzea
+LBL_zimbraFeatureMailRecallInterval = posta gogoratzeko tartea
 LBL_zimbraPrefMandatorySpellCheckEnabled = Gaitu nahitatezko zuzentzaile ortografikoa
 SEND_READ_RECEIPT_PROMPT = Galdetu
 SEND_READ_RECEIPT_NEVER = Inoiz ez
