--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -1007,6 +1007,8 @@ MSG_zimbraPrefReadReceiptsToAddress = V\u00e1laszc\u00edm az olvas\u00e1si vissz
 LBL_zimbraPrefReadReceiptsToAddress = V\u00e1laszc\u00edm az olvas\u00e1si visszaigazol\u00e1si \u00fczenethez: 
 LBL_zimbraPrefMailSendReadReceipts = Olvas\u00e1si visszaigazol\u00e1sok k\u00fcld\u00e9se:
 LBL_zimbraFeatureReadReceiptsEnabled = Olvas\u00e1si visszaigazol\u00e1sok enged\u00e9lyez\u00e9se
+LBL_zimbraFeatureEnableMailRecall = postai visszah\u00edv\u00e1s
+LBL_zimbraFeatureMailRecallInterval = lev\u00e9l visszah\u00edv\u00e1s intervallum
 LBL_zimbraPrefMandatorySpellCheckEnabled = K\u00f6telez\u0151 helyes\u00edr\u00e1s-ellen\u0151rz\u00e9s enged\u00e9lyez\u00e9se
 SEND_READ_RECEIPT_PROMPT = R\u00e1k\u00e9rdez\u00e9s
 SEND_READ_RECEIPT_NEVER = Soha
