--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -1009,6 +1009,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Alamat balas-ke untuk pesan laporan dibaca
 LBL_zimbraPrefReadReceiptsToAddress = Alamat balas-ke untuk pesan laporan dibaca: 
 LBL_zimbraPrefMailSendReadReceipts = Kirim laporan dibaca:
 LBL_zimbraFeatureReadReceiptsEnabled = Aktifkan laporan dibaca
+LBL_zimbraFeatureEnableMailRecall = penarikan surat
+LBL_zimbraFeatureMailRecallInterval = interval pengingat surat
 LBL_zimbraPrefMandatorySpellCheckEnabled = Aktifkan pemeriksaan ejaan wajib
 SEND_READ_RECEIPT_PROMPT = Prompt
 SEND_READ_RECEIPT_NEVER = Tidak pernah
