--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -1007,6 +1007,8 @@ MSG_zimbraPrefReadReceiptsToAddress = \u05db\u05ea\u05d5\u05d1\u05ea \u05dc\u05e
 LBL_zimbraPrefReadReceiptsToAddress = \u05db\u05ea\u05d5\u05d1\u05ea \u05dc\u05ea\u05e9\u05d5\u05d1\u05d4 \u05e2\u05d1\u05d5\u05e8 \u05d4\u05d5\u05d3\u05e2\u05ea \u05e0\u05de\u05e2\u05df \u05e9\u05e0\u05e7\u05e8\u05d0\u05d4: 
 LBL_zimbraPrefMailSendReadReceipts = \u05e9\u05dc\u05d7 \u05e0\u05de\u05e2\u05e0\u05d9\u05dd \u05e9\u05e0\u05e7\u05e8\u05d0\u05d5:
 LBL_zimbraFeatureReadReceiptsEnabled = \u05d4\u05e4\u05e2\u05dc \u05e0\u05de\u05e2\u05e0\u05d9\u05dd \u05e9\u05e0\u05e7\u05e8\u05d0\u05d5
+LBL_zimbraFeatureEnableMailRecall = \u05d0\u05d7\u05d6\u05d5\u05e8 \u05d3\u05d5\u05d0\u05e8
+LBL_zimbraFeatureMailRecallInterval = \u05de\u05e8\u05d5\u05d5\u05d7 \u05d6\u05db\u05d9\u05e8\u05ea \u05d3\u05d5\u05d0\u05e8
 LBL_zimbraPrefMandatorySpellCheckEnabled = \u05d4\u05e4\u05e2\u05dc \u05d1\u05d3\u05d9\u05e7\u05ea \u05d0\u05d9\u05d5\u05ea \u05d7\u05d5\u05d1\u05d4
 SEND_READ_RECEIPT_PROMPT = \u05d1\u05e7\u05e9\u05d4
 SEND_READ_RECEIPT_NEVER = \u05d0\u05e3 \u05e4\u05e2\u05dd
