--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -1009,6 +1009,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Svaradresse for lesekvittering
 LBL_zimbraPrefReadReceiptsToAddress = Svaradresse for lesekvittering: 
 LBL_zimbraPrefMailSendReadReceipts = Send lesekvitteringer:
 LBL_zimbraFeatureReadReceiptsEnabled = Aktiver lesekvitteringer
+LBL_zimbraFeatureEnableMailRecall = tilbakekalling av e-post
+LBL_zimbraFeatureMailRecallInterval = intervall for tilbakekalling av e-post
 LBL_zimbraPrefMandatorySpellCheckEnabled = Aktiver obligatorisk stavekontroll
 SEND_READ_RECEIPT_PROMPT = Sp\u00f8r
 SEND_READ_RECEIPT_NEVER = Aldri
