--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -1000,6 +1000,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Adres zwrotny dla potwierdzenia przeczytan
 LBL_zimbraPrefReadReceiptsToAddress = Adres zwrotny dla potwierdzenia przeczytania wiadomo\u015bci: 
 LBL_zimbraPrefMailSendReadReceipts = Wysy\u0142aj potwierdzenia przeczytania:
 LBL_zimbraFeatureReadReceiptsEnabled = W\u0142\u0105cz potwierdzenia przeczytania
+LBL_zimbraFeatureEnableMailRecall = odwo\u0142anie poczty
+LBL_zimbraFeatureMailRecallInterval = interwa\u0142 przypominania poczty
 LBL_zimbraPrefMandatorySpellCheckEnabled = W\u0142\u0105cz obowi\u0105zkowe sprawdzanie pisowni
 SEND_READ_RECEIPT_PROMPT = Pytaj
 SEND_READ_RECEIPT_NEVER = Nigdy
