--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -979,6 +979,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Endere\u00e7o de resposta para mensagem de
 LBL_zimbraPrefReadReceiptsToAddress = Endere\u00e7o de resposta para mensagem de confirma\u00e7\u00e3o de leitura: 
 LBL_zimbraPrefMailSendReadReceipts = Enviar confirma\u00e7\u00f5es de leitura:
 LBL_zimbraFeatureReadReceiptsEnabled = Ativar confirma\u00e7\u00f5es de leitura
+LBL_zimbraFeatureEnableMailRecall = recall de e-mail
+LBL_zimbraFeatureMailRecallInterval = intervalo de recupera\u00e7\u00e3o de e-mail
 LBL_zimbraPrefMandatorySpellCheckEnabled = Ativar verifica\u00e7\u00e3o ortogr\u00e1fica obrigat\u00f3ria
 SEND_READ_RECEIPT_PROMPT = Solicita\u00e7\u00e3o
 SEND_READ_RECEIPT_NEVER = Nunca
