--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -1007,6 +1007,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Adresa la care se trimite confirmarea de c
 LBL_zimbraPrefReadReceiptsToAddress = Adresa la care se trimite confirmarea de citire: 
 LBL_zimbraPrefMailSendReadReceipts = Trimitere confirm\u0103ri de citire:
 LBL_zimbraFeatureReadReceiptsEnabled = Activare confirm\u0103ri de citire
+LBL_zimbraFeatureEnableMailRecall = rechemare prin e-mail
+LBL_zimbraFeatureMailRecallInterval = interval de rechemare a e-mailului
 LBL_zimbraPrefMandatorySpellCheckEnabled = Activare verificare ortografic\u0103 obligatorie
 SEND_READ_RECEIPT_PROMPT = \u00centreab\u0103
 SEND_READ_RECEIPT_NEVER = Niciodat\u0103
