--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -1007,6 +1007,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Naslov za odgovor za sporo\u010dilo o potr
 LBL_zimbraPrefReadReceiptsToAddress = Naslov za odgovor za sporo\u010dilo o potrdilu o branju: 
 LBL_zimbraPrefMailSendReadReceipts = Po\u0161lji potrdila o branju:
 LBL_zimbraFeatureReadReceiptsEnabled = Omogo\u010di potrdila o branju
+LBL_zimbraFeatureEnableMailRecall = odpoklic po po\u0161ti
+LBL_zimbraFeatureMailRecallInterval = interval odpoklica po\u0161te
 LBL_zimbraPrefMandatorySpellCheckEnabled = Omogo\u010di obvezno preverjanje \u010drkovanja 
 SEND_READ_RECEIPT_PROMPT = Poziv
 SEND_READ_RECEIPT_NEVER = Nikoli
