--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -980,6 +980,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Svarsadress f\u00f6r l\u00e4skvitto
 LBL_zimbraPrefReadReceiptsToAddress = Svarsadress f\u00f6r l\u00e4skvitto: 
 LBL_zimbraPrefMailSendReadReceipts = Skicka l\u00e4skvitton:
 LBL_zimbraFeatureReadReceiptsEnabled = Aktivera l\u00e4skvitton
+LBL_zimbraFeatureEnableMailRecall = mail \u00e5terkallelse
+LBL_zimbraFeatureMailRecallInterval = e-post\u00e5terst\u00e4llningsintervall
 LBL_zimbraPrefMandatorySpellCheckEnabled = Aktivera obligatorisk stavningskontroll
 SEND_READ_RECEIPT_PROMPT = Fr\u00e5ga
 SEND_READ_RECEIPT_NEVER = Aldrig
