--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -1009,6 +1009,8 @@ MSG_zimbraPrefReadReceiptsToAddress = \u0110\u1ecba ch\u1ec9 tr\u1ea3 l\u1eddi c
 LBL_zimbraPrefReadReceiptsToAddress = \u0110\u1ecba ch\u1ec9 tr\u1ea3 l\u1eddi cho c\u00e1c th\u00f4ng b\u00e1o x\u00e1c nh\u1eadn \u0111\u00e3 \u0111\u1ecdc: 
 LBL_zimbraPrefMailSendReadReceipts = G\u1eedi th\u01b0 \u0111\u00e3 \u0111\u1ecdc:
 LBL_zimbraFeatureReadReceiptsEnabled = B\u1eadt th\u00f4ng b\u00e1o x\u00e1c nh\u1eadn \u0111\u00e3 \u0111\u1ecdc
+LBL_zimbraFeatureEnableMailRecall = \u0074\u0068\u0075 \u0068\u1ed3\u0069 \u0074\u0068\u01b0
+LBL_zimbraFeatureMailRecallInterval = \u006b\u0068\u006f\u1ea3\u006e\u0067 \u0074\u0068\u1edd\u0069 \u0067\u0069\u0061\u006e \u0074\u0068\u0075 \u0068\u1ed3\u0069 \u0074\u0068\u01b0
 LBL_zimbraPrefMandatorySpellCheckEnabled = B\u1eadt ki\u1ec3m tra ch\u00ednh t\u1ea3 b\u1eaft bu\u1ed9c
 SEND_READ_RECEIPT_PROMPT = L\u1eddi nh\u1eafc
 SEND_READ_RECEIPT_NEVER = Kh\u00f4ng bao gi\u1edd
