--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -1005,6 +1005,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Adre\u00e7a del missatge de confirmaci\u00
 LBL_zimbraPrefReadReceiptsToAddress = Adre\u00e7a del missatge de confirmaci\u00f3 de lectura del missatge rebut: 
 LBL_zimbraPrefMailSendReadReceipts = Envia confirmacions de lectura:
 LBL_zimbraFeatureReadReceiptsEnabled = Habilita confirmacions de lectura
+LBL_zimbraFeatureEnableMailRecall = recordatori de correu
+LBL_zimbraFeatureMailRecallInterval = interval de recuperaci\u00f3 del correu
 LBL_zimbraPrefMandatorySpellCheckEnabled = Habilita el corrector ortogr\u00e0fic obligatori
 SEND_READ_RECEIPT_PROMPT = Indicaci\u00f3
 SEND_READ_RECEIPT_NEVER = Mai
