--- a/WebRoot/messages/ZaMsg_en_GB.properties
+++ b/WebRoot/messages/ZaMsg_en_GB.properties
@@ -975,6 +975,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Reply-to address for read receipt message
 LBL_zimbraPrefReadReceiptsToAddress = Reply-to address for read receipt message: 
 LBL_zimbraPrefMailSendReadReceipts = Send read receipts
 LBL_zimbraFeatureReadReceiptsEnabled = Enable read receipts
+LBL_zimbraFeatureEnableMailRecall = Mail recall
+LBL_zimbraFeatureMailRecallInterval = Mail recall interval
 LBL_zimbraPrefMandatorySpellCheckEnabled = Enable mandatory spell check
 SEND_READ_RECEIPT_PROMPT = Prompt
 SEND_READ_RECEIPT_NEVER = Never
