--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -996,6 +996,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Adresse de r\u00e9ponse pour le mail d\u20
 LBL_zimbraPrefReadReceiptsToAddress = Adresse de r\u00e9ponse pour le mail d\u2019accus\u00e9 de lecture\u00a0: 
 LBL_zimbraPrefMailSendReadReceipts = Envoyer les accus\u00e9s de lecture \u00e0 l\u2019adresse\u00a0:
 LBL_zimbraFeatureReadReceiptsEnabled = Activer les accus\u00e9s de lecture
+LBL_zimbraFeatureEnableMailRecall = rappel de courrier
+LBL_zimbraFeatureMailRecallInterval = intervalle de rappel de courrier
 LBL_zimbraPrefMandatorySpellCheckEnabled = Activer la v\u00e9rification orthographique obligatoire
 SEND_READ_RECEIPT_PROMPT = Solliciter un accus\u00e9 de lecture
 SEND_READ_RECEIPT_NEVER = Jamais
