--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -988,6 +988,8 @@ MSG_zimbraPrefReadReceiptsToAddress = \u95b2\u89a7\u78ba\u8a8d\u30e1\u30c3\u30bb
 LBL_zimbraPrefReadReceiptsToAddress = \u95b2\u89a7\u78ba\u8a8d\u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u8fd4\u4fe1\u30a2\u30c9\u30ec\u30b9\uff1a 
 LBL_zimbraPrefMailSendReadReceipts = \u95b2\u89a7\u78ba\u8a8d\u3092\u9001\u4fe1\uff1a
 LBL_zimbraFeatureReadReceiptsEnabled = \u95b2\u89a7\u78ba\u8a8d\u3092\u6709\u52b9\u306b\u3059\u308b
+LBL_zimbraFeatureEnableMailRecall = \u30e1\u30fc\u30eb\u306e\u53d6\u308a\u6d88\u3057
+LBL_zimbraFeatureMailRecallInterval = \u30e1\u30fc\u30eb\u53d6\u308a\u6d88\u3057\u306e\u671f\u9650
 LBL_zimbraPrefMandatorySpellCheckEnabled = \u30b9\u30da\u30eb\u30c1\u30a7\u30c3\u30af\u3092\u5f37\u5236\u7684\u306b\u5b9f\u884c\u3059\u308b
 SEND_READ_RECEIPT_PROMPT = \u30e1\u30c3\u30bb\u30fc\u30b8\u3092\u8868\u793a\u3059\u308b
 SEND_READ_RECEIPT_NEVER = \u9001\u4fe1\u3057\u306a\u3044
