--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -988,6 +988,8 @@ MSG_zimbraPrefReadReceiptsToAddress = \uc77d\uc74c \ud655\uc778 \uba54\uc2dc\uc9
 LBL_zimbraPrefReadReceiptsToAddress = \uc77d\uc74c \ud655\uc778 \uba54\uc2dc\uc9c0\ub97c \uc704\ud55c \ub2f5\uc7a5 \uc8fc\uc18c: 
 LBL_zimbraPrefMailSendReadReceipts = \uc77d\uc74c \ud655\uc778 \ubcf4\ub0b4\uae30:
 LBL_zimbraFeatureReadReceiptsEnabled = \uc77d\uc74c \ud655\uc778 \uc0ac\uc6a9
+LBL_zimbraFeatureEnableMailRecall = \uba54\uc77c \ub9ac\ucf5c
+LBL_zimbraFeatureMailRecallInterval = \uba54\uc77c \ub9ac\ucf5c \uac04\uaca9
 LBL_zimbraPrefMandatorySpellCheckEnabled = \ud544\uc218 \ub9de\ucda4\ubc95 \uac80\uc0ac \uc0ac\uc6a9
 SEND_READ_RECEIPT_PROMPT = \ub9e4\ubc88 \ud655\uc778
 SEND_READ_RECEIPT_NEVER = \uc548 \ud568
