--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -1007,6 +1007,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Alamat balas kepada untuk mesej penerimaan
 LBL_zimbraPrefReadReceiptsToAddress = Alamat balas kepada untuk mesej penerimaan dibaca: 
 LBL_zimbraPrefMailSendReadReceipts = Hantar penerimaan dibaca:
 LBL_zimbraFeatureReadReceiptsEnabled = Dayakan penerimaan dibaca
+LBL_zimbraFeatureEnableMailRecall = ingat semula mel
+LBL_zimbraFeatureMailRecallInterval = selang ingat semula mel
 LBL_zimbraPrefMandatorySpellCheckEnabled = Dayakan semakan ejaan wajib
 SEND_READ_RECEIPT_PROMPT = Gesaan
 SEND_READ_RECEIPT_NEVER = Jangan Sesekali
