--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -999,6 +999,8 @@ MSG_zimbraPrefReadReceiptsToAddress = \u8bfb\u4fe1\u56de\u6761\u7684\u56de\u590d
 LBL_zimbraPrefReadReceiptsToAddress = \u8bfb\u4fe1\u56de\u6761\u7684\u56de\u590d\u5730\u5740\uff1a 
 LBL_zimbraPrefMailSendReadReceipts = \u53d1\u9001\u8bfb\u4fe1\u56de\u6761\uff1a
 LBL_zimbraFeatureReadReceiptsEnabled = \u542f\u7528\u8bfb\u4fe1\u56de\u6761\u529f\u80fd
+LBL_zimbraFeatureEnableMailRecall = \u90ae\u4ef6\u53ec\u56de
+LBL_zimbraFeatureMailRecallInterval = \u90ae\u4ef6\u53ec\u56de\u95f4\u9694
 LBL_zimbraPrefMandatorySpellCheckEnabled = \u542f\u7528\u62fc\u5199\u68c0\u67e5
 SEND_READ_RECEIPT_PROMPT = \u63d0\u793a
 SEND_READ_RECEIPT_NEVER = \u4ece\u4e0d
