--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -980,6 +980,8 @@ MSG_zimbraPrefReadReceiptsToAddress = \u8b80\u4fe1\u56de\u689d\u7684\u56de\u8986
 LBL_zimbraPrefReadReceiptsToAddress = \u8b80\u4fe1\u56de\u689d\u7684\u56de\u8986\u5730\u5740\uff1a 
 LBL_zimbraPrefMailSendReadReceipts = \u50b3\u9001\u8b80\u4fe1\u56de\u689d\uff1a
 LBL_zimbraFeatureReadReceiptsEnabled = \u555f\u7528\u8b80\u4fe1\u56de\u689d\u529f\u80fd
+LBL_zimbraFeatureEnableMailRecall = \u90ae\u4ef6\u53ec\u56de
+LBL_zimbraFeatureMailRecallInterval = \u90ae\u4ef6\u53ec\u56de\u95f4\u9694
 LBL_zimbraPrefMandatorySpellCheckEnabled = \u5553\u7528\u62fc\u5b57\u6aa2\u67e5
 SEND_READ_RECEIPT_PROMPT = \u63d0\u793a
 SEND_READ_RECEIPT_NEVER = \u5f9e\u4e0d
