--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -1006,6 +1006,8 @@ MSG_zimbraPrefReadReceiptsToAddress = \u8b80\u4fe1\u56de\u689d\u7684\u56de\u8986
 LBL_zimbraPrefReadReceiptsToAddress = \u8b80\u4fe1\u56de\u689d\u7684\u56de\u8986\u5730\u5740: 
 LBL_zimbraPrefMailSendReadReceipts = \u50b3\u9001\u8b80\u4fe1\u56de\u689d:
 LBL_zimbraFeatureReadReceiptsEnabled = \u555f\u7528\u8b80\u4fe1\u56de\u689d\u529f\u80fd
+LBL_zimbraFeatureEnableMailRecall = \u90ae\u4ef6\u53ec\u56de
+LBL_zimbraFeatureMailRecallInterval = \u90ae\u4ef6\u53ec\u56de\u95f4\u9694
 LBL_zimbraPrefMandatorySpellCheckEnabled = \u555f\u7528\u5f37\u5236\u62fc\u5b57\u6aa2\u67e5\u529f\u80fd
 SEND_READ_RECEIPT_PROMPT = \u63d0\u793a
 SEND_READ_RECEIPT_NEVER = \u5f9e\u4e0d
