ZBUG-3474 Upgrade ChartJS to 4.1.2

--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -1202,7 +1202,7 @@ NAD_StatsYear = \u00daltimos 365 d\u00edas
 
 NAD_AdvStatsDataTip = {0} a las {1}
 NAD_AdvStatsIntervalFormatMinutes = intervalo: {0} minutos
-NAD_AdvStatsTipDateFormat = %H:%M  el %e de %b
+NAD_AdvStatsTipDateFormat = HH:mm el dd de MMM
 NAD_AdvStatsLabelDateFormat = %H:%M
 NAD_AdvStatsLoadingDataLabel = cargando los datos del gr\u00e1fico\u2026
 NAD_AdvStatsNoDataLabel = no hay datos disponibles
