--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -1198,7 +1198,7 @@ NAD_StatsYear = \u904e\u53bb365\u65e5
 
 NAD_AdvStatsDataTip = {1}\u306b{0}
 NAD_AdvStatsIntervalFormatMinutes = \u9593\u9694:{0}\u5206
-NAD_AdvStatsTipDateFormat = %b %e %I:%M %p
+NAD_AdvStatsTipDateFormat = MMM dd HH:mm
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = \u30b0\u30e9\u30d5\u306e\u30c7\u30fc\u30bf\u3092\u30ed\u30fc\u30c9\u4e2d...
 NAD_AdvStatsNoDataLabel = \u30c7\u30fc\u30bf\u304c\u3042\u308a\u307e\u305b\u3093
