--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -1189,7 +1189,7 @@ NAD_StatsYear = Afgelopen 365 dagen
 
 NAD_AdvStatsDataTip = {0} om {1}
 NAD_AdvStatsIntervalFormatMinutes = interval: {0} minuten
-NAD_AdvStatsTipDateFormat = %I:%M %p op %b %e
+NAD_AdvStatsTipDateFormat = HH:mm op MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = gegevens voor grafiek laden...
 NAD_AdvStatsNoDataLabel = geen gegevens beschikbaar
