--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -1188,7 +1188,7 @@ NAD_StatsYear = \u00daltimos 365 dias
 
 NAD_AdvStatsDataTip = {0} em {1}
 NAD_AdvStatsIntervalFormatMinutes = intervalo: {0} minutos
-NAD_AdvStatsTipDateFormat = %H:%M em %e %b
+NAD_AdvStatsTipDateFormat = HH:mm em dd MMM
 NAD_AdvStatsLabelDateFormat = %H:%M
 NAD_AdvStatsLoadingDataLabel = carregando dados para o gr\u00e1fico...
 NAD_AdvStatsNoDataLabel = n\u00e3o h\u00e1 dados dispon\u00edveis
