--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -1216,7 +1216,7 @@ NAD_StatsYear = Ultimele 365 de zile
 
 NAD_AdvStatsDataTip = {0} la {1}
 NAD_AdvStatsIntervalFormatMinutes = interval: {0} minute
-NAD_AdvStatsTipDateFormat = %I:%M %p pe %b %e
+NAD_AdvStatsTipDateFormat = HH:mm pe MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = se \u00eencarc\u0103 date pentru diagram\u0103...
 NAD_AdvStatsNoDataLabel = nu sunt disponibile date
