--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -1216,7 +1216,7 @@ NAD_StatsYear = Zadnjih 365 dni
 
 NAD_AdvStatsDataTip = {0} ob {1}
 NAD_AdvStatsIntervalFormatMinutes = interval: {0} minut/i/e
-NAD_AdvStatsTipDateFormat = %I:%M %p na %b %e
+NAD_AdvStatsTipDateFormat = HH:mm na MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = nalaganje podatkov za grafikon ...
 NAD_AdvStatsNoDataLabel = na voljo ni nobenih podatkov
