--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -1189,7 +1189,7 @@ NAD_StatsYear = Senaste 365 dagarna
 
 NAD_AdvStatsDataTip = {0} klockan {1}
 NAD_AdvStatsIntervalFormatMinutes = intervall: {0} minuter
-NAD_AdvStatsTipDateFormat = %I:%M %p %e %b
+NAD_AdvStatsTipDateFormat = HH:mm dd MMM
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = laddar data f\u00f6r diagram...
 NAD_AdvStatsNoDataLabel = inga data tillg\u00e4ngliga
