--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -1205,7 +1205,7 @@ NAD_StatsYear = Derniers 365 jours
 
 NAD_AdvStatsDataTip = {0} \u00e0\u00a0: {1}
 NAD_AdvStatsIntervalFormatMinutes = intervalle\u00a0: {0} minutes
-NAD_AdvStatsTipDateFormat = %I:%M %p, le\u00a0: %b %e
+NAD_AdvStatsTipDateFormat = HH:mm, le\u00a0: MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = Chargement des donn\u00e9es du graphique...
 NAD_AdvStatsNoDataLabel = Pas de donn\u00e9es disponibles
