--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -1222,7 +1222,7 @@ NAD_StatsYear = Last 365 days
 
 NAD_AdvStatsDataTip = {0} at {1}
 NAD_AdvStatsIntervalFormatMinutes = interval: {0} minutes
-NAD_AdvStatsTipDateFormat =  %I:%M %p on %b %e
+NAD_AdvStatsTipDateFormat =  %I:%M %p on MMM dd
 NAD_AdvStatsLabelDateFormat =  %I:%M %p
 NAD_AdvStatsLoadingDataLabel = loading data for chart...
 NAD_AdvStatsNoDataLabel = no data available
