--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -1216,7 +1216,7 @@ NAD_StatsYear = 365 \u0ea1\u0eb7\u0ec9\u0e9c\u0ec8\u0eb2\u0e99\u0ea1\u0eb2.
 
 NAD_AdvStatsDataTip = {0} \u0e97\u0eb5\u0ec8 {1}
 NAD_AdvStatsIntervalFormatMinutes = \u0e8a\u0ec8\u0ea7\u0e87\u200b\u200b\u200b\u0ec4\u0ea5\u0e8d\u0eb0: {0} \u0e99\u0eb2\u200b\u0e97\u0eb5
-NAD_AdvStatsTipDateFormat = %H:%M \u200b\u0ec3\u0e99 %e %b
+NAD_AdvStatsTipDateFormat = HH:mm \u200b\u0ec3\u0e99 dd MMM
 NAD_AdvStatsLabelDateFormat = %H:%M
 NAD_AdvStatsLoadingDataLabel = \u0e81\u0eb3\u0ea5\u0eb1\u0e87\u200b\u0ec2\u0eab\u0ea5\u0e94\u200b\u0e82\u0ecd\u0ec9\u200b\u0ea1\u0eb9\u0e99\u200b\u0eaa\u0eb3\u0ea5\u0eb1\u0e9a\u200b\u0e95\u0eb2\u200b\u0e95\u0eb0\u0ea5\u0eb2\u0e87...
 NAD_AdvStatsNoDataLabel = \u0e9a\u0ecd\u0ec8\u200b\u0ea1\u0eb5\u200b\u0e82\u0ecd\u0ec9\u200b\u0ea1\u0eb9\u0e99
