ZBUG-3474 Upgrade ChartJS to 4.1.2

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -1214,7 +1214,7 @@ NAD_StatsYear = Darrers 365 dies
 
 NAD_AdvStatsDataTip = El {0} a les {1}
 NAD_AdvStatsIntervalFormatMinutes = interval: {0} minuts
-NAD_AdvStatsTipDateFormat =  %I:%M %p el %b %e
+NAD_AdvStatsTipDateFormat =  HH:mm el MMM dd
 NAD_AdvStatsLabelDateFormat =  %I:%M %p
 NAD_AdvStatsLoadingDataLabel = s\u2019estan carregant les dades del gr\u00e0fic \u2026
 NAD_AdvStatsNoDataLabel = no hi ha dades disponibles
