--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -1205,7 +1205,7 @@ NAD_StatsYear = Last 365 days
 
 NAD_AdvStatsDataTip = {0} at {1}
 NAD_AdvStatsIntervalFormatMinutes = interval: {0} minutes
-NAD_AdvStatsTipDateFormat = %I:%M %p on %e %b
+NAD_AdvStatsTipDateFormat = HH:mm on dd MMM
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = loading data for chart...
 NAD_AdvStatsNoDataLabel = no data available
