--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -1210,7 +1210,7 @@ NAD_StatsYear = Azken 365 egunak
 
 NAD_AdvStatsDataTip = {0} hemen {1}
 NAD_AdvStatsIntervalFormatMinutes = bitartea: {0} minutu
-NAD_AdvStatsTipDateFormat = %H:%M hemen: %b %e
+NAD_AdvStatsTipDateFormat = HH:mm hemen: MMM dd
 NAD_AdvStatsLabelDateFormat = %H:%M
 NAD_AdvStatsLoadingDataLabel = Grafikoaren datuak kargatzen
 NAD_AdvStatsNoDataLabel = Ez dago daturik eskuragarri
