--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -1215,7 +1215,7 @@ NAD_StatsYear = Derniers 365 jours
 
 NAD_AdvStatsDataTip = {0} \u00e0 {1}
 NAD_AdvStatsIntervalFormatMinutes = intervalle\u00a0: {0} minutes
-NAD_AdvStatsTipDateFormat = %I:%M %p le %b %e
+NAD_AdvStatsTipDateFormat = HH:mm le MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = Chargement des donn\u00e9es du graphique...
 NAD_AdvStatsNoDataLabel = Pas de donn\u00e9es disponibles
