--- a/WebRoot/messages/ZaMsg_hi.properties
+++ b/WebRoot/messages/ZaMsg_hi.properties
@@ -1188,7 +1188,7 @@ NAD_StatsYear = \u0905\u0902\u0924\u093f\u092e 365 \u0926\u093f\u0928
 
 NAD_AdvStatsDataTip = {1} \u092a\u0930 {0}
 NAD_AdvStatsIntervalFormatMinutes = \u0905\u0902\u0924\u0930\u093e\u0932: {0} \u092e\u093f\u0928\u091f
-NAD_AdvStatsTipDateFormat = %b %e \u092a\u0930 %H:%M
+NAD_AdvStatsTipDateFormat = MMM dd \u092a\u0930 HH:mm
 NAD_AdvStatsLabelDateFormat = %H:%M
 NAD_AdvStatsLoadingDataLabel = \u091a\u093e\u0930\u094d\u091f \u0915\u0947 \u0932\u093f\u090f \u0921\u0947\u091f\u093e \u0932\u094b\u0921 \u0915\u0930 \u0930\u0939\u093e \u0939\u0948...
 NAD_AdvStatsNoDataLabel = \u0915\u094b\u0908 \u0921\u0947\u091f\u093e \u0909\u092a\u0932\u092c\u094d\u0927 \u0928\u0939\u0940\u0902 \u0939\u0948
