--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -1217,7 +1217,7 @@ NAD_StatsYear = 365 hari terakhir
 
 NAD_AdvStatsDataTip = {0} di {1}
 NAD_AdvStatsIntervalFormatMinutes = interval: {0} menit
-NAD_AdvStatsTipDateFormat = %I:%M %p pada %b %e
+NAD_AdvStatsTipDateFormat = HH:mm pada MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = memuat data untuk grafik...
 NAD_AdvStatsNoDataLabel = tidak ada data yang tersedia
