--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -1188,7 +1188,7 @@ NAD_StatsYear = Ultimi 365 giorni
 
 NAD_AdvStatsDataTip = {0} a {1}
 NAD_AdvStatsIntervalFormatMinutes = intervallo: {0} minuti
-NAD_AdvStatsTipDateFormat = %I:%M %p il %b %e
+NAD_AdvStatsTipDateFormat = HH:mm il MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = caricamento dati per il grafico...
 NAD_AdvStatsNoDataLabel = nessun dato disponibile
