--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -1215,7 +1215,7 @@ NAD_StatsYear = 365 hari lepas
 
 NAD_AdvStatsDataTip = {0} pada {1}
 NAD_AdvStatsIntervalFormatMinutes = selang: {0} minit
-NAD_AdvStatsTipDateFormat = %I:%M %p pada %b %e
+NAD_AdvStatsTipDateFormat = HH:mm pada MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = memuatkan data untuk carta...
 NAD_AdvStatsNoDataLabel = tiada data tersedia
