--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -1208,7 +1208,7 @@ NAD_StatsYear = Ostatnie 365 dni
 
 NAD_AdvStatsDataTip = {0} w {1}
 NAD_AdvStatsIntervalFormatMinutes = interwa\u0142: {0} minut
-NAD_AdvStatsTipDateFormat = %H:%M  dnia %e %b
+NAD_AdvStatsTipDateFormat = HH:mm  dnia dd MMM
 NAD_AdvStatsLabelDateFormat = %H:%M
 NAD_AdvStatsLoadingDataLabel = \u0142adowanie danych do wykresu...
 NAD_AdvStatsNoDataLabel = brak dost\u0119pnych danych
