--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -1218,7 +1218,7 @@ NAD_StatsYear = \u00daltimos 365 dias
 
 NAD_AdvStatsDataTip = {0}, \u00e0s {1}
 NAD_AdvStatsIntervalFormatMinutes = intervalo: {0} minutos
-NAD_AdvStatsTipDateFormat =  %I:%M %p a %b %e
+NAD_AdvStatsTipDateFormat =  HH:mm a MMM dd
 NAD_AdvStatsLabelDateFormat =  %I:%M %p
 NAD_AdvStatsLoadingDataLabel = a carregar dados do gr\u00e1fico...
 NAD_AdvStatsNoDataLabel = n\u00e3o h\u00e1 dados dispon\u00edveis
