--- a/WebRoot/messages/ZaMsg_ta.properties
+++ b/WebRoot/messages/ZaMsg_ta.properties
@@ -1218,7 +1218,7 @@ NAD_StatsYear = \u0b95\u0b9f\u0bc8\u0b9a\u0bbf 365 \u0ba8\u0bbe\u0b9f\u0bcd\u0b9
 
 NAD_AdvStatsDataTip = {0} \u0b85\u0ba9\u0bcd\u0bb1\u0bc1 {1} \u0bae\u0ba3\u0bbf\u0b95\u0bcd\u0b95\u0bc1
 NAD_AdvStatsIntervalFormatMinutes = \u0b87\u0b9f\u0bc8\u0bb5\u0bc7\u0bb3\u0bc8: {0} \u0ba8\u0bbf\u0bae\u0bbf\u0b9f\u0b99\u0bcd\u0b95\u0bb3\u0bcd
-NAD_AdvStatsTipDateFormat =  %H:%M %b \u0b85\u0ba9\u0bcd\u0bb1\u0bc1 %e
+NAD_AdvStatsTipDateFormat =  HH:mm MMM \u0b85\u0ba9\u0bcd\u0bb1\u0bc1 dd
 NAD_AdvStatsLabelDateFormat =  %H:%M
 NAD_AdvStatsLoadingDataLabel = \u0bb5\u0bb0\u0bc8\u0baa\u0b9f\u0ba4\u0bcd\u0ba4\u0bbf\u0bb1\u0bcd\u0b95\u0bbe\u0ba9 \u0ba4\u0bb0\u0bb5\u0bc8 \u0b8f\u0bb1\u0bcd\u0bb1\u0bc1\u0b95\u0bbf\u0bb1\u0ba4\u0bc1...
 NAD_AdvStatsNoDataLabel = \u0ba4\u0bb0\u0bb5\u0bc1 \u0b8e\u0ba4\u0bc1\u0bb5\u0bc1\u0bae\u0bcd \u0b87\u0bb2\u0bcd\u0bb2\u0bc8
