--- a/WebRoot/messages/ZaMsg_ar.properties
+++ b/WebRoot/messages/ZaMsg_ar.properties
@@ -1206,7 +1206,7 @@ NAD_StatsYear = \u0622\u062e\u0631 \u0663\u0666\u0665 \u064a\u0648\u0645
 
 NAD_AdvStatsDataTip = {0} \u0641\u064a \u200e{1}
 NAD_AdvStatsIntervalFormatMinutes = \u0641\u0627\u0635\u0644 \u0632\u0645\u0646\u064a:\u200f {0} \u062f\u0642\u064a\u0642\u0629
-NAD_AdvStatsTipDateFormat = \u200e%I:%M %p \u0641\u064a %b %e\u200f
+NAD_AdvStatsTipDateFormat = \u200eHH:mm \u0641\u064a MMM dd\u200f
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = \u062c\u0627\u0631\u064d \u062a\u062d\u0645\u064a\u0644 \u0627\u0644\u0628\u064a\u0627\u0646\u0627\u062a \u0644\u0644\u062a\u062e\u0637\u064a\u0637...\u200f
 NAD_AdvStatsNoDataLabel = \u0644\u0627 \u062a\u0648\u062c\u062f \u0628\u064a\u0627\u0646\u0627\u062a \u0645\u062a\u0627\u062d\u0629
