--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -1188,7 +1188,7 @@ NAD_StatsYear = De sidste 365 dage
 
 NAD_AdvStatsDataTip = {0} kl.  {1}
 NAD_AdvStatsIntervalFormatMinutes = interval: {0} minutter
-NAD_AdvStatsTipDateFormat = %I:%M %p on %b %e
+NAD_AdvStatsTipDateFormat = HH:mm on MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = indl\u00e6ser data til diagram...
 NAD_AdvStatsNoDataLabel = ingen data tilg\u00e6ngelige
