--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -1215,7 +1215,7 @@ NAD_StatsYear = 365 \u05d4\u05d9\u05de\u05d9\u05dd \u05d4\u05d0\u05d7\u05e8\u05d
 
 NAD_AdvStatsDataTip = {0} \u05d1-{1}
 NAD_AdvStatsIntervalFormatMinutes = \u05de\u05e8\u05d5\u05d5\u05d7: {0} \u05d3\u05e7\u05d5\u05ea
-NAD_AdvStatsTipDateFormat = %I:%M %p \u05d1-%b %e
+NAD_AdvStatsTipDateFormat = HH:mm \u05d1-MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = \u05d8\u05d5\u05e2\u05df \u05e0\u05ea\u05d5\u05e0\u05d9\u05dd \u05e2\u05d1\u05d5\u05e8 \u05ea\u05e8\u05e9\u05d9\u05dd...
 NAD_AdvStatsNoDataLabel = \u05d0\u05d9\u05df \u05e0\u05ea\u05d5\u05e0\u05d9\u05dd \u05d6\u05de\u05d9\u05e0\u05d9\u05dd
