--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -1213,7 +1213,7 @@ NAD_StatsYear = 365 \u0e27\u0e31\u0e19\u0e17\u0e35\u0e48\u0e41\u0e25\u0e49\u0e27
 
 NAD_AdvStatsDataTip = {0} \u0e17\u0e35\u0e48 {1}
 NAD_AdvStatsIntervalFormatMinutes = \u0e0a\u0e48\u0e27\u0e07\u0e40\u0e27\u0e25\u0e32: {0} \u0e19\u0e32\u0e17\u0e35
-NAD_AdvStatsTipDateFormat = %I:%M %p \u0e1a\u0e19 %b %e
+NAD_AdvStatsTipDateFormat = HH:mm \u0e1a\u0e19 MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = \u0e01\u0e33\u0e25\u0e31\u0e07\u0e42\u0e2b\u0e25\u0e14\u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25\u0e2a\u0e33\u0e2b\u0e23\u0e31\u0e1a\u0e41\u0e1c\u0e19\u0e20\u0e39\u0e21\u0e34...
 NAD_AdvStatsNoDataLabel = \u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25\u0e44\u0e21\u0e48\u0e1e\u0e23\u0e49\u0e2d\u0e21\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19
