ZBUG-3474 Upgrade ChartJS to 4.1.2

--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -1196,7 +1196,7 @@ NAD_StatsYear = In den letzten 365 Tagen
 
 NAD_AdvStatsDataTip = {0} um {1}
 NAD_AdvStatsIntervalFormatMinutes = Intervall: {0} Minuten
-NAD_AdvStatsTipDateFormat = %H:%M am %e. %b
+NAD_AdvStatsTipDateFormat = HH:mm am dd. MMM
 NAD_AdvStatsLabelDateFormat = %H:%M
 NAD_AdvStatsLoadingDataLabel = Daten f\u00fcr Diagramm werden geladen...
 NAD_AdvStatsNoDataLabel = keine Daten vorhanden
