--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -1214,7 +1214,7 @@ NAD_StatsYear = Utols\u00f3 365 nap
 
 NAD_AdvStatsDataTip = {0} \u2013 {1}
 NAD_AdvStatsIntervalFormatMinutes = id\u0151k\u00f6z: {0} perc
-NAD_AdvStatsTipDateFormat = %I:%M %p \u2013 %b %e
+NAD_AdvStatsTipDateFormat = HH:mm \u2013 MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = diagram adatainak bet\u00f6lt\u00e9se...
 NAD_AdvStatsNoDataLabel = az adatok nem \u00e9rhet\u0151k el
