--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -1195,7 +1195,7 @@ NAD_StatsYear = \uc9c0\ub09c 365\uc77c
 
 NAD_AdvStatsDataTip = {1}\uc5d0 {0}
 NAD_AdvStatsIntervalFormatMinutes = \uac04\uaca9: {0}\ubd84
-NAD_AdvStatsTipDateFormat = %b %e, %I:%M %p
+NAD_AdvStatsTipDateFormat = MMM dd, HH:mm
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = \ucc28\ud2b8\uc6a9 \ub370\uc774\ud130 \ubd88\ub7ec\uc624\ub294 \uc911\u2026
 NAD_AdvStatsNoDataLabel = \uc0ac\uc6a9\ud560 \uc218 \uc788\ub294 \ub370\uc774\ud130\uac00 \uc5c6\uc2b5\ub2c8\ub2e4
