--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -1217,7 +1217,7 @@ NAD_StatsYear = Siste 365 dager
 
 NAD_AdvStatsDataTip = {0} kl. {1}
 NAD_AdvStatsIntervalFormatMinutes = intervall: {0} minutter
-NAD_AdvStatsTipDateFormat =  %I:%M %p p\u00e5 %b %e
+NAD_AdvStatsTipDateFormat =  HH:mm p\u00e5 MMM dd
 NAD_AdvStatsLabelDateFormat =  %I:%M %p
 NAD_AdvStatsLoadingDataLabel = laster inn data for diagram\u00a0...
 NAD_AdvStatsNoDataLabel = ingen data tilgjengelig
