--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -1212,7 +1212,7 @@ NAD_StatsYear = Son 365 g\u00fcn
 
 NAD_AdvStatsDataTip = {0} saat: {1}
 NAD_AdvStatsIntervalFormatMinutes = aral\u0131k: {0} dakika
-NAD_AdvStatsTipDateFormat = %b %e, %H:%M
+NAD_AdvStatsTipDateFormat = MMM dd, HH:mm
 NAD_AdvStatsLabelDateFormat = %H:%M
 NAD_AdvStatsLoadingDataLabel = grafik i\u00e7in veriler y\u00fckleniyor...
 NAD_AdvStatsNoDataLabel = kullan\u0131labilir veri yok
