--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -1217,7 +1217,7 @@ NAD_StatsYear = 365 ng\u00e0y qua
 
 NAD_AdvStatsDataTip = {0} l\u00fac {1}
 NAD_AdvStatsIntervalFormatMinutes = kho\u1ea3ng th\u1eddi gian: {0} ph\u00fat
-NAD_AdvStatsTipDateFormat =  %I:%M %p v\u00e0o %b %e
+NAD_AdvStatsTipDateFormat =  HH:mm v\u00e0o MMM dd
 NAD_AdvStatsLabelDateFormat =  %I:%M %p
 NAD_AdvStatsLoadingDataLabel = \u0111ang t\u1ea3i d\u1eef li\u1ec7u cho bi\u1ec3u \u0111\u1ed3...
 NAD_AdvStatsNoDataLabel = d\u1eef li\u1ec7u kh\u00f4ng kh\u1ea3 d\u1ee5ng
