--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -1187,7 +1187,7 @@ NAD_StatsYear = \u904e\u53bb 365 \u5929
 
 NAD_AdvStatsDataTip = {0} \u6642\u9593\ufe55 {1}
 NAD_AdvStatsIntervalFormatMinutes = \u9593\u9694\uff1a{0} \u5206\u9418
-NAD_AdvStatsTipDateFormat = %I:%M %p \u65e5\u671f\ufe55%b %e
+NAD_AdvStatsTipDateFormat = HH:mm \u65e5\u671f\ufe55MMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = \u6b63\u5728\u8f09\u5165\u5716\u8868\u8cc7\u6599...
 NAD_AdvStatsNoDataLabel = \u6c92\u6709\u53ef\u7528\u8cc7\u6599
