--- a/WebRoot/messages/ZaMsg_ru.properties
+++ b/WebRoot/messages/ZaMsg_ru.properties
@@ -1186,7 +1186,7 @@ NAD_StatsYear = \u041f\u043e\u0441\u043b\u0435\u0434\u043d\u0438\u0435 365 \u043
 
 NAD_AdvStatsDataTip = {0} \u0432 {1}
 NAD_AdvStatsIntervalFormatMinutes = \u0438\u043d\u0442\u0435\u0440\u0432\u0430\u043b: {0} \u043c\u0438\u043d\u0443\u0442
-NAD_AdvStatsTipDateFormat = %e %b, %H:%M
+NAD_AdvStatsTipDateFormat = dd MMM, HH:mm
 NAD_AdvStatsLabelDateFormat = %H:%M
 NAD_AdvStatsLoadingDataLabel = \u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0430 \u0434\u0430\u043d\u043d\u044b\u0445 \u0434\u043b\u044f \u0434\u0438\u0430\u0433\u0440\u0430\u043c\u043c\u044b...
 NAD_AdvStatsNoDataLabel = \u043d\u0435\u0442 \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0445 \u0434\u0430\u043d\u043d\u044b\u0445
