--- a/WebRoot/messages/ZaMsg_uk.properties
+++ b/WebRoot/messages/ZaMsg_uk.properties
@@ -1212,7 +1212,7 @@ NAD_StatsYear = \u041e\u0441\u0442\u0430\u043d\u043d\u0456 365 \u0434\u043d\u045
 
 NAD_AdvStatsDataTip = {0} \u0432 {1}
 NAD_AdvStatsIntervalFormatMinutes = \u0456\u043d\u0442\u0435\u0440\u0432\u0430\u043b: {0} \u0445\u0432.
-NAD_AdvStatsTipDateFormat = %H:%M, %b %e
+NAD_AdvStatsTipDateFormat = HH:MM, MMM dd
 NAD_AdvStatsLabelDateFormat = %H:%M
 NAD_AdvStatsLoadingDataLabel = \u0437\u0430\u0432\u0430\u043d\u0442\u0430\u0436\u0435\u043d\u043d\u044f \u0434\u0430\u043d\u0438\u0445 \u0434\u043b\u044f \u0434\u0456\u0430\u0433\u0440\u0430\u043c\u0438...
 NAD_AdvStatsNoDataLabel = \u043d\u0435\u043c\u0430\u0454 \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u0438\u0445 \u0434\u0430\u043d\u0438\u0445
