--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -1206,7 +1206,7 @@ NAD_StatsYear = \u8fc7\u53bb 365 \u5929
 
 NAD_AdvStatsDataTip = {0} \u65f6\u95f4\uff1a {1}
 NAD_AdvStatsIntervalFormatMinutes = \u65f6\u95f4\u95f4\u9694: {0} \u5206\u949f
-NAD_AdvStatsTipDateFormat = %I:%M %p \u65e5\u671f\uff1a%b %e
+NAD_AdvStatsTipDateFormat = HH:mm \u65e5\u671f\uff1aMMM dd
 NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = \u6b63\u5728\u52a0\u8f7d\u56fe\u8868\u6570\u636e...
 NAD_AdvStatsNoDataLabel = \u6ca1\u6709\u53ef\u7528\u6570\u636e
