ZCS-13650: Added translation

--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -1182,7 +1182,7 @@ NAD_Remove = Eliminar
 NAD_ForwardTo = Reenviar correo a
 NAD_COSName = Nombre de Clase de servicio
 NAD_PwdLocked = Evitar que el usuario cambie la contrase\u00f1a
-NAD_AllowUsernameInPassword = Permitir nombre de usuario en contraseña
+NAD_AllowUsernameInPassword = Permitir nombre de usuario en contrase\u00f1a
 NAD_ResetToCOS = Restablecer al valor de Clase de servicio
 NAD_OverrideCOS = Invalidar Clase de servicio
 NAD_ResetToGlobal = Restablecer al valor general
