ZCS-13650: Modify translation for japense lang

--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -1178,7 +1178,7 @@ NAD_Remove = \u524a\u9664
 NAD_ForwardTo = \u30e1\u30fc\u30eb\u306e\u8ee2\u9001\u5148
 NAD_COSName = \u63d0\u4f9b\u30b5\u30fc\u30d3\u30b9\u540d
 NAD_PwdLocked = \u30e6\u30fc\u30b6\u30fc\u304c\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u5909\u66f4\u3057\u306a\u3044\u3088\u3046\u306b\u3059\u308b
-NAD_AllowUsernameInPassword = \u30d1\u30b9\u30ef\u30fc\u30c9\u306b\u30e6\u30fc\u30b6\u30fc\u540d\u3092\u8a31\u53ef\u3059\u308b
+NAD_AllowUsernameInPassword = \u30d1\u30b9\u30ef\u30fc\u30c9\u306b\u30e6\u30fc\u30b6\u30fc\u540d\u3092\u542b\u3081\u308b\u3053\u3068\u3092\u8a31\u53ef
 NAD_ResetToCOS = \u63d0\u4f9b\u30b5\u30fc\u30d3\u30b9\u306e\u5024\u306b\u30ea\u30bb\u30c3\u30c8
 NAD_OverrideCOS = \u63d0\u4f9b\u30b5\u30fc\u30d3\u30b9\u3092\u7121\u8996
 NAD_ResetToGlobal = \u30b0\u30ed\u30fc\u30d0\u30eb\u5024\u306b\u30ea\u30bb\u30c3\u30c8
