--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -1780,7 +1780,7 @@ ERROR_dlWithThisNameExists = Distribution list, resource, alias or account with 
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Error! Message retention time has to be more than 30 days!
 ERROR_PASSWORD_REQUIRED = Must specify a password!
 ERROR_PASSWORD_MISMATCH = Passwords do not match!
-ERROR_PASSWORD_CONTAIN_USERNAME = Password cannot contain username.
+ERROR_PASSWORD_CONTAIN_USERNAME = Lozinka ne mo\u017ee sadr\u017eavati korisni\u010dko ime.
 ERROR_PASSWORD_TOOLONG = Password is too long!
 ERROR_PASSWORD_TOOSHORT = Password is too short!
 ERROR_PASSWORD_INVALID = Password is invalid
